--- a/upload-app/package.json
+++ b/upload-app/package.json
@@ -10,6 +10,9 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241205.0",
     "typescript": "^5.3.3",
-    "wrangler": "^3.99.0"
+    "wrangler": "^4.54.0"
+  },
+  "dependencies": {
+    "@cloudflare/kv-asset-handler": "^0.4.1"
   }
 }
