feat: add Gemini receipt amount tagging in worker and UI

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@ YNAB_API_KEY=your-api-key-here
 # Your YNAB budget ID (from URL when viewing budget: app.ynab.com/{budget_id}/...)
 YNAB_BUDGET_ID=your-budget-id-here
 
+# Gemini API key (for receipt amount tagging)
+GEMINI_API_KEY=your-gemini-api-key-here
+
+# Optional Gemini model override (default in worker: gemini-3-flash-preview)
+GEMINI_MODEL=gemini-3-flash-preview
+
 # Receipt upload worker URL (after deployment)
 R2_WORKER_URL=https://receipt-upload.your-subdomain.workers.dev
 
